--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@ body {
 .container {
     border: 2px solid black;
     width: 600px;
-    height: 700px;
+    height: fit-content;
     margin-top: 5%;
     padding: 10px;
+    background-color: black;
 }
 
 .screen {
@@ -17,6 +18,7 @@ body {
     padding: 40px 8px 0px 0px;
     font-size: 80px;
     text-align: end;
+    background-color: rgb(30, 30, 255);
 }
 
 .row-one {
@@ -26,9 +28,22 @@ body {
 
 .num {
     border: 2px solid black;
+    border-radius: 11px;
     padding: 5px;
+    margin: 5px;
     font-size: 80px;
     flex: 1;
     text-align: center;
+    background-color: aliceblue;
 }
 
+button {
+    width: fit-content;
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
